[package]
name = "diarry"
version = "0.1.0"
authors = ["Enether <familyguyuser192@windowslive.com>"]

[dependencies]
rocket = "0.2.4"
rocket_codegen = "0.2.4"
rocket_contrib = "0.2.4"
diesel = { version = "1.4.6", features = ["postgres", "chrono"] }
diesel_codegen = { version = "0.11.0", features = ["postgres"] }
dotenv = "0.8.0"
chrono = { version = "0.3", features = ["serde", "rustc-serialize"] }
serde_derive = "0.9.12"
serde = "0.9.12"
serde_json = "0.9"
djangohashers = "0.2"
jwt = "0.4.0"
rust-crypto = "^0.2"
time = "0.1"
